--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -38,4 +38,8 @@
     <string name="app_halo_label_black">Blacklist from HALO</string>
     <string name="app_halo_label_white">Whitelist from HALO</string>
 
+    <!--Lockscreen See Through-->
+    <string name="see_through_title">Lockscreen Blur</string>
+    <string name="see_through_summary">Blurs and display the content behind your lockscreen, your data may be visible to those around you</string>
+
 </resources>
