--- a/res/xml/lockscreen_notifications.xml
+++ b/res/xml/lockscreen_notifications.xml
@@ -48,7 +48,7 @@
         android:title="@string/force_expanded_view"
         android:summary="@string/force_expanded_view_summary" />
 
-    <com.android.settings.liquid.NumberPickerPreference
+    <com.android.settings.lego.NumberPickerPreference
         android:key="notifications_height"
         android:dialogMessage="@string/notifications_height"
         android:title="@string/notifications_height"
