--- a/res/xml/security_settings_chooser.xml
+++ b/res/xml/security_settings_chooser.xml
@@ -34,7 +34,7 @@
 
         <PreferenceScreen
             android:title="@string/lockscreen_notifications"
-            android:fragment="com.android.settings.liquid.LockscreenNotifications" />
+            android:fragment="com.android.settings.lego.LockscreenNotifications" />
 
     </PreferenceCategory>
 
